<resources>
    <string name="app_name">BrainyT</string>
    <string name="app_version">V1.0.1</string>

    <string name="str_permission_denied">권한이 더 진행되도록 허용하십시오.</string>
    <string name="app_finish_message">\'뒤로\' 버튼을 한번 더 누르면 종료됩니다."</string>
    <string name="empty_content">내용을 입력해주세요.</string>
    <string name="exist_phone">이미 등록된 전화번호입니다.</string>
    <string name="incorrect_phone">전화번호는 11자리이어야 합니다.</string>

    <string name="yes">네</string>
    <string name="no">아니오</string>
    <string name="sensor">센서</string>
    <string name="sensor_edit">센서 편집</string>
    <string name="search">검색</string>
    <string name="alarm">알림</string>
    <string name="alarm_edit">알림 편집</string>
    <string name="setting">설정</string>
    <string name="sensor_hint">터치하여 센서 찾기</string>
    <string name="search_hint">검색중...</string>
    <string name="alarm_hint">수신인 추가 시\n터치하세요.</string>
    <string name="max_alarm_number">알람 수신번호는 최대 3개까지 등록 가능합니다.</string>
    <string name="max_sensor_number">센서는 최대 3개까지 등록 가능합니다.</string>
    <string name="alert_alarm_interval">반복 주기 설정</string>
    <string name="info">정보</string>
    <string name="about">About</string>
    <string name="homepage">홈페이지</string>
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
    <string name="delete">삭제</string>
    <string name="edit">변경</string>
    <string name="report_setting">리포트 설정</string>
    <string name="report_kind">리포트 종류</string>
    <string name="report_daily">일일 보고</string>
    <string name="report_weekly">주간 보고</string>
    <string name="report_monethly">월간 보고</string>
    <string name="receive_user_add">수신인 추가</string>
    <string name="receive_user_edit">수신인 편집</string>
    <string name="receive_user">수신인</string>
    <string name="input_receive_user">수신받을 핸드폰 번호를 입력해주세요.</string>
    <string name="sms">SMS</string>
    <string name="version">Version</string>
    <string name="web_sms">Cloud SMS</string>
    <string name="alarm_talk">알림톡</string>
    <string name="alarm_check1">센서 배터리 부족</string>
    <string name="alarm_check2">센서 암호화 해제 및 설정</string>
    <string name="alarm_check3">베이스스테이션 전원 공급 차단</string>
    <string name="alarm_check4">센서 통신 오류</string>
    <string name="alarm_check5">온도 제한 초과</string>
    <string name="alarm_check6">S/W 오류</string>
    <string name="alarm_check7">습도 제한 초과</string>
    <string name="error_log">에러 로그</string>
    <string name="error_log_hint">개발팀에 에러 로그 전송</string>
    <string name="user_id">사용자 ID</string>
    <string name="policy">개인정보 보호정책</string>
    <string name="opensource">오픈소스 라이센스</string>
    <string name="terms">이용 약관</string>
    <string name="sensing_repeat">온도 센싱 간격</string>
    <string name="sensing_repeat_hint">온도를 센싱하는 반복주기를 설정합니다.</string>
    <string name="alert_sing_repeat">디바이스 경보음 반복</string>
    <string name="alert_sing_repeat_hint">계속 경계 초과 시 디바이스 경보음의 반복주기를 설정합니다.</string>
    <string name="alarm_repeat">SMS 알림 반복</string>
    <string name="alarm_repeat_repeat">계속 경계 초과 시 SMS 알림의 반복 주기를 설정합니다.</string>
    <string name="alarm_sing_repeat">디바이스 경보음 반복 주기</string>
    <string name="alarm_repeat1">SMS 알림 반복 주기</string>
    <string name="alarm_sing_none">디바이스 경보음 사용 안함</string>
    <string name="alarm_sms_alarm_none">SMS 알림 사용 안함</string>
    <string name="minute1">1분</string>
    <string name="minute3">3분</string>
    <string name="minute5">5분</string>
    <string name="minute10">10분</string>
    <string name="minute15">15분</string>
    <string name="minute30">30분</string>
    <string name="minute60">1시간</string>
    <string name="sensor_name_edit_title">센서 이름 변경</string>
    <string name="sensor_delete_title">목록에서 센서를 제거하고 데이터를\n삭제하시겠습니까?</string>
    <string name="sensor_delete_content">목록에서 센서를 제거하면 모든 측정값이 손실됩니다.</string>
    <string name="sensor_edit_title">언제 센서를 다시 교정할 계획이십니까?</string>
    <string name="sensor_edit_content">교정 기한이 되면 SMS/이메일로 통지됩니다.</string>
    <string name="sensor_edit_duration1">1년 후</string>
    <string name="sensor_edit_duration2">2년 후(권장)</string>
    <string name="sensor_edit_duration3">3년 후</string>
    <string name="sensor_edit_duration4">안 함</string>
    <string name="calendar_title">교정 날짜 선택</string>
    <string name="calendar_title_start_date">시작 날짜 선택</string>
    <string name="calendar_title_end_date">종료 날짜 선택</string>
    <string name="sensor_correction_alert">센서가 교정되었습니까?</string>
    <string name="temperature">온도</string>
    <string name="temp_limit_title">온도 제한</string>
    <string name="humidity">습도</string>
    <string name="humi_limit_title">습도 제한</string>
    <string name="max_temp">상한값</string>
    <string name="min_temp">하한값</string>
    <string name="current_temp">현재 온도</string>
    <string name="sensor_info">센서정보</string>
    <string name="battery_status">배터리 상태</string>
    <string name="firmware_version">펌웨어 버전</string>
    <string name="temp_limit_hint_min">-35.0°C ~ 70.0°C사이의 값을 입력하세요.</string>
    <string name="temp_limit_hint_max">-35.0°C ~ 70.0°C사이의 값을 입력하세요.</string>
    <string name="temp_limit_hint_incorrect">정확한 온도값을 입력해주세요.</string>
    <string name="humi_limit_hint">0% ~ 100%사이의 값을 입력하세요.</string>
    <string name="humi_limit_hint_incorrect">정확한 습도값을 입력해주세요.</string>
    <string name="alarm_delay">SMS 알림 지연</string>
    <string name="alarm_delay_content">위 제한 초과 시 전송될 SMS 알림을 지연합니다.</string>
    <string name="email_address">이메일 주소</string>
    <string name="start_date">시작 날짜</string>
    <string name="end_date">종료 날짜</string>
    <string name="type">형식</string>
    <string name="type1">양식</string>
    <string name="form1">전체</string>
    <string name="form2">요약</string>
    <string name="out">내보내기</string>
    <string name="request_report">리포트 전송</string>
    <string name="send_report">입력하신 메일주소로 리포트를 전송하였습니다.\n메일함을 확인하세요.</string>
    <string name="fail_report">리포트 전송에 실패하였습니다.다시 시도해주세요.</string>
    <string name="input_mail">메일 주소를 입력해주세요.</string>
    <string name="not_vaild_mail">올바른 메일 주소가 아닙니다. 다시 입력해주세요.</string>
    <string name="over_max_date">한 번에 최대 31일의 리포트를 요청할 수 있습니다.\n31일을 초과하는 리포트는 나누어 요청해주세요.</string>
    <string name="alert_music">경보음</string>
    <string name="alert_music_delete">눌러서 경보음 해제</string>
    <string name="gps_off">위치서비스가 꺼져있습니다.\n위치서비스를 활성화하겠습니까?</string>
    <string name="bluetooth_off">블루투스가 꺼져있습니다.\n블루투스를 활성화하겠습니까?</string>
    <string name="add_sensor_success">센서가 추가되었습니다.</string>
    <string name="delay_time_minute">지연 시간(분)</string>
    <string name="delay_time_setting">알림 지연 설정</string>
    <string name="delay_time_setting_alert">값은 1분에서 60분 사이여야 합니다.</string>
    <string name="connect_fail">서버 연결이 실패했습니다. 네트워크 상태를 확인해주세요. </string>
    <string name="device_auth_fail">디바이스 인증 실패했습니다.</string>
    <string name="not_find_device">서버에서 디바이스를 찾을 수 없습니다.</string>
    <string name="save_complete">저장되었습니다.</string>
    <string name="scanning_biggest_circle">M 4.5 8.8 C 5.638 8.798 6.73 8.343 7.535 7.537 C 8.339 6.731 8.791 5.638 8.791 4.5 C 8.791 3.362 8.339 2.269 7.535 1.463 C 6.73 0.657 5.638 0.202 4.5 0.2 C 3.362 0.202 2.27 0.657 1.465 1.463 C 0.661 2.269 0.209 3.362 0.209 4.5 C 0.209 5.638 0.661 6.731 1.465 7.537 C 2.27 8.343 3.362 8.798 4.5 8.8 Z</string>
    <string name="scanning_hidden_circle">M 4.5 5 C 4.632 4.999 4.758 4.946 4.852 4.852 C 4.945 4.759 4.997 4.632 4.997 4.5 C 4.997 4.368 4.945 4.241 4.852 4.148 C 4.758 4.054 4.632 4.001 4.5 4 C 4.368 4.001 4.242 4.054 4.148 4.148 C 4.055 4.241 4.003 4.368 4.003 4.5 C 4.003 4.632 4.055 4.759 4.148 4.852 C 4.242 4.946 4.368 4.999 4.5 5 Z</string>
    <string name="scanning_middle_circle">M 4.5 7.7 C 5.347 7.698 6.159 7.36 6.758 6.76 C 7.356 6.16 7.692 5.347 7.692 4.5 C 7.692 3.653 7.356 2.84 6.758 2.24 C 6.159 1.64 5.347 1.302 4.5 1.3 C 3.653 1.302 2.841 1.64 2.242 2.24 C 1.644 2.84 1.308 3.653 1.308 4.5 C 1.308 5.347 1.644 6.16 2.242 6.76 C 2.841 7.36 3.653 7.698 4.5 7.7 Z</string>
    <string name="scanning_smallest_circle">M 4.5 6.5 C 5.029 6.498 5.537 6.287 5.91 5.912 C 6.284 5.537 6.494 5.029 6.494 4.5 C 6.494 3.971 6.284 3.463 5.91 3.088 C 5.537 2.713 5.029 2.502 4.5 2.5 C 3.971 2.502 3.463 2.713 3.09 3.088 C 2.716 3.463 2.506 3.971 2.506 4.5 C 2.506 5.029 2.716 5.537 3.09 5.912 C 3.463 6.287 3.971 6.498 4.5 6.5 Z</string>

</resources>