<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="dialog"
            type="kr.brainylab.view.dailog.TempLimitDialog" />
    </data>

    <RelativeLayout
        android:id="@+id/rly_background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/color_66000000">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/xml_img_ffffff_round5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/notosanskrbold"
                android:text="@string/temp_limit_title"
                android:textColor="@color/color_002060"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/notosanskrregular"
                android:text="@string/max_temp"
                android:textColor="@color/color_002060"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edt_temp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/xml_color_border_round"
                android:fontFamily="@font/notosanskrregular"
                android:inputType="numberDecimal|numberSigned"
                android:digits="0123456789-."
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/color_171717"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/notosanskrregular"
                android:text="@string/temp_limit_hint_min"
                android:textColor="@color/color_171717"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="25dp"
                android:background="@color/color_caccd0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/notosanskrbold"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/color_171717"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/color_caccd0" />

                <TextView
                    android:id="@+id/btn_confirm"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/notosanskrbold"
                    android:gravity="center"
                    android:text="@string/confirm"
                    android:textColor="@color/color_171717"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</layout>