<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="dialog"
            type="kr.brainylab.view.dailog.SensorDurationDialog" />
    </data>

    <RelativeLayout
        android:id="@+id/rly_background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/color_66000000">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/xml_img_ffffff_round5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/notosanskrbold"
                android:text="@string/alarm"
                android:textColor="@color/color_002060"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/notosanskrregular"
                android:gravity="center_horizontal"
                android:maxLines="2"
                android:text="@string/sensor_edit_title"
                android:textColor="@color/color_002060"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/notosanskrregular"
                android:gravity="center_horizontal"
                android:maxLines="2"
                android:text="@string/sensor_edit_content"
                android:textColor="@color/color_171717"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/lly_1_year"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_1_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/ic_option_off1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/notosanskrregular"
                        android:text="@string/sensor_edit_duration1"
                        android:textColor="@color/color_171717"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lly_2_year"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_2_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/ic_option_off1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/notosanskrregular"
                        android:text="@string/sensor_edit_duration2"
                        android:textColor="@color/color_171717"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lly_3_year"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_3_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/ic_option_off1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/notosanskrregular"
                        android:text="@string/sensor_edit_duration3"
                        android:textColor="@color/color_171717"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lly_0_year"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_0_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/ic_option_off1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/notosanskrregular"
                        android:text="@string/sensor_edit_duration4"
                        android:textColor="@color/color_171717"
                        android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/color_caccd0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/notosanskrbold"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/color_171717"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/color_caccd0" />

                <TextView
                    android:id="@+id/btn_confirm"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/notosanskrbold"
                    android:gravity="center"
                    android:text="@string/confirm"
                    android:textColor="@color/color_171717"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</layout>