<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/notosanskrbold"
                android:text="@string/temperature"
                android:textColor="@color/color_002060"
                android:textSize="20sp" />

            <RelativeLayout
                android:id="@+id/rly_max"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:fontFamily="@font/notosanskrregular"
                    android:text="@string/max_temp"
                    android:textColor="@color/color_171717"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/notosanskrbold"
                    android:text="30.0°C"
                    android:textColor="@color/color_171717"
                    android:textSize="22sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rly_min"
                android:layout_width="match_parent"
                android:layout_height="45dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:fontFamily="@font/notosanskrregular"
                    android:text="@string/min_temp"
                    android:textColor="@color/color_171717"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/notosanskrbold"
                    android:text="-10.0°C"
                    android:textColor="@color/color_171717"
                    android:textSize="22sp" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/notosanskrbold"
                android:text="@string/alarm_delay"
                android:textColor="@color/color_002060"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/lly_alarm_delay"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_option_off1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/notosanskrregular"
                    android:text="@string/alarm_delay_content"
                    android:textColor="@color/color_171717"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lly_delay_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosanskrregular"
                    android:text="@string/delay_time_minute"
                    android:textColor="@color/color_171717"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_delay_time"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:fontFamily="@font/notosanskrregular"
                    android:text="10"
                    android:gravity="center_vertical"
                    android:textColor="@color/color_171717"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_171717" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>