<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="dialog"
            type="kr.brainylab.view.dailog.OneBtnDialog" />
    </data>

    <RelativeLayout
        android:id="@+id/rly_background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/color_66000000">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/xml_img_ffffff_round5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/notosanskrbold"
                android:text="@string/alarm"
                android:textColor="@color/color_002060"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/notosanskrregular"
                android:gravity="center_horizontal"
                android:text="@string/max_alarm_number"
                android:textColor="@color/color_171717"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/color_caccd0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/notosanskrbold"
                    android:gravity="center"
                    android:text="@string/confirm"
                    android:textColor="@color/color_171717"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</layout>